--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -569,7 +569,6 @@ a.a-btn{
 	line-height:38px;
 }
 .a-btn-text{
-    padding-top:10px;
     display:block;
     font-size:18px;
     white-space:nowrap;
@@ -985,6 +984,7 @@ color: #666666;
 }
 
 fieldset textarea {
+fontsize: 1vw;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
 border-radius: 5px;
@@ -1223,23 +1223,48 @@ span.former {
 	text-shadow: 0.1vw 0.1vw 0.3vw #aaaaaa;
 }
 span.former input[type=text]{
-	margin-left: 0.1vw;
+	margin: 0.1vw;
 	font-size: 1vw;
 	text-shadow: 0.1vw 0.1vw 0.3vw #aaaaaa;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	border: 1px solid #BBBBBB;
+	height: 1.05vw;
+	color: #000000;
+	-webkit-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+	-moz-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+	box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+	background-position: 10px 6px;
+	display: block;
+	transition: 0.3s;
+	transform-style: preserve-3d;
+}
+span.former input[type=text]:focus {
+	outline: none;
+	border: 1px solid #77BACE;
+	-webkit-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+	-moz-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+	box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+	transition: 0.3s;
+	transform-style: preserve-3d;
 }
 span.former input[type=text]:disabled{
-	margin-left: 0.1vw;
 	border: none;
 	background-color: #ffffff;
 	color: #000000;
 	font-size: 1vw;
 	text-shadow: 0.1vw 0.1vw 0.3vw #aaaaaa;
+	transition: 0.3s;
+	transform-style: preserve-3d;
 }
 
 /* Concerts/Stadiums list */
 .list{
 	width: 90%;
 	margin: 5px auto; 
+	transition: 0.6s;
+	transform-style: preserve-3d;
 }
 .list_pic{
 	float: left;
