--- a/src/main/webapp/css/layout.css
+++ b/src/main/webapp/css/layout.css
@@ -1294,7 +1294,7 @@ select.former{
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 	border: 1px solid #BBBBBB;
-	height: 1.05vw;
+	height: 1.5vw;
 	color: #000000;
 	-webkit-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
 	-moz-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
@@ -1304,11 +1304,26 @@ select.former{
 	transition: 0.3s;
 	transform-style: preserve-3d;
 }
+select.former:focus{
+	outline: none;
+	border: 1px solid #77BACE;
+	-webkit-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+	-moz-box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+	box-shadow: inset 0 2px 2px #ccc, 0 0 10px #ADDCE6;
+	transition: 0.3s;
+	transform-style: preserve-3d;
+}
 
 /* Concerts/Stadiums list */
 .list{
 	width: 90%;
-	margin: 5px auto; 
+	margin: 5px auto;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+	-moz-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
+	box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
 	transition: 0.6s;
 	transform-style: preserve-3d;
 }
